<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        app:cardCornerRadius="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorWhite"
            tools:ignore="MissingConstraints">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp">


                <EditText
                    android:id="@+id/customerf_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext"
                    android:hint="@string/enter_customer_name"
                    android:inputType="text"
                    android:padding="10dp"
                    android:paddingLeft="10dp"
                    />

                <EditText
                    android:id="@+id/customerl_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext"
                    android:hint="@string/enter_customerlast_name"
                    android:inputType="text"
                    android:padding="10dp"
                    android:paddingLeft="10dp"
                    />

                <EditText
                    android:maxLength="10"
                    android:id="@+id/customer_mnmbr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext"
                    android:hint="@string/enter_customer_number"
                    android:inputType="number"
                    android:padding="10dp"
                    android:paddingLeft="10dp"
                    />

                <EditText
                    android:maxLength="10"
                    android:id="@+id/customer_other_mnmbr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext"
                    android:hint="@string/other_number"
                    android:inputType="number"
                    android:padding="10dp"
                    android:paddingLeft="10dp"
                    />

                <Spinner
                    android:visibility="gone"
                    android:id="@+id/sp_make_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext"
                    android:maxLength="10"
                    android:padding="10dp"
                    android:paddingLeft="10dp"
                    android:singleLine="true" />

                <Spinner
                    android:visibility="gone"
                    android:id="@+id/sp_model_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext"
                    android:maxLength="10"
                    android:padding="10dp"
                    android:paddingLeft="10dp"
                    android:singleLine="true" />

                <Spinner
                    android:visibility="visible"
                    android:id="@+id/spn_AddPD_ProductName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext"
                    android:maxLength="10"
                    android:padding="10dp"
                    android:paddingLeft="10dp"
                    android:singleLine="true" />

                <Spinner
                    android:visibility="visible"
                    android:id="@+id/sp_model_emp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext"
                    android:padding="10dp"
                    android:paddingLeft="10dp"
                    android:singleLine="true" />


                <Spinner
                    android:id="@+id/sp_paymenttype"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext"
                    android:padding="10dp"
                    android:paddingLeft="10dp"
                    android:singleLine="true" />


                <Spinner
                    android:id="@+id/sp_passingtype"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext"
                    android:padding="10dp"
                    android:paddingLeft="10dp"
                    android:singleLine="true" />

                <Spinner
                    android:id="@+id/spnDealType"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="50dp"
                    android:background="@drawable/edittext"
                    android:padding="10dp"
                    android:textSize="20sp" />


                <!-- android:id="@+id/model_name"-->
                <EditText
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext"
                    android:hint="@string/enter_model_name"
                    android:inputType="textMultiLine"
                    android:padding="10dp"
                    android:paddingLeft="10dp"
                    />

                <EditText
                    android:id="@+id/note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext"
                    android:hint="@string/enter_description_note"
                    android:inputType="textMultiLine"
                    android:padding="10dp"
                    android:paddingLeft="10dp"
                    />

                <Button
                    android:layout_marginTop="10dp"
                    android:id="@+id/getlocation"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="Get Location"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="18dp" />

                <TextView
                    android:visibility="gone"
                    android:id="@+id/locationget"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext"
                    android:paddingLeft="10dp" />

                <Button
                    android:id="@+id/btn_edit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

        </ScrollView>



        </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>